[package]
name = "tss-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ququzone/tss-cli"
keywords = ["ethereum", "web3", "mpc", "tss"]

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
