[package]
name = "tss-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ququzone/tss-cli"
keywords = ["ethereum", "web3", "mpc", "tss"]

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.25"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros"] }
